#57369 fix white space one footer

--- a/sass/blocks/_footer.scss
+++ b/sass/blocks/_footer.scss
@@ -1,16 +1,21 @@
 footer {
-  margin-top: 5rem;
-  padding: 2rem 1.5rem;
-
-  @include min-screen($screen-tablet) {
-    margin-top: 1.5rem;
-    padding: 2rem;
-  }
+  margin-top: .5rem;
   @include min-screen($screen-desktop) {
-    padding: 3rem 5.875rem;
-    max-width: 90rem;
-    margin: 1.5rem auto 0;
-    @include fullWidthBackground(inherit);
+    margin-top: 1.5rem;
+  }
+
+  .footer-wrapper {
+    padding: 2rem 1.5rem;
+
+    @include min-screen($screen-tablet) {
+      margin-top: 1.5rem;
+      padding: 2rem;
+    }
+    @include min-screen($screen-desktop) {
+      padding: 3rem 5.875rem;
+      max-width: 90rem;
+      margin: 0 auto;
+    }
   }
 
   .footer-top {
